# OTCS

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md
common/: CMakeLists.txt  spacecraft_types.cpp  spacecraft_types.hpp
docs/: ARCHITECTURE.md  DEMO.md  ENVIRONMENT.md  FIRMWARE.md  FLIGHT_COMPUTER.md  GROUND_STATION.md  PROTOCOL.md  SETUP.md
firmware/hello_world/: CMakeLists.txt  README.md  main.cpp
firmware/pico_satellite_node/: CMakeLists.txt  README.md  main.cpp
flight_computer/: CMakeLists.txt  flight_computer.cpp  flight_computer.hpp  main.cpp
ground_station/: CMakeLists.txt  main.cpp  mission_logger.cpp  mission_logger.hpp  serial_port.cpp  serial_port.hpp  status_banner.cpp  status_banner.hpp
pico_tests/: blink_universal.uf2  hello_universal.uf2
protocol/: CMakeLists.txt  text_protocol.cpp  text_protocol.hpp
tests/: CMakeLists.txt  common_tests.cpp  flight_computer_tests.cpp  protocol_tests.cpp
